--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-//file:noinspection GrDeprecatedAPIUsage
 //file:noinspection GroovyUnusedAssignment
 //file:noinspection VulnerableLibrariesLocal
 plugins {
@@ -50,12 +49,13 @@ test {
 }
 
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+    imageZip = layout.buildDirectory.file("distributions/app-${javafx.platform.classifier}.zip").get().asFile
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
     }
 }
+
 
 jlinkZip {
     group = 'distribution'
